Fix layout gaps

--- a/src/assets/styles/basics/layout.css
+++ b/src/assets/styles/basics/layout.css
@@ -22,7 +22,7 @@
 
 main {
   display: grid;
-  grid-template-columns: var(--sidebar-width) 6px 1fr auto;
+  grid-template-columns: var(--sidebar-width) 4px 1fr auto;
   gap: 4px;
   max-width: 100%;
   width: 100%;
